# ChangeLog for dev-cpp/growler-math
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Jun 2010; Andreas K. Huettel (dilfridge) <mail@akhuettel.de>
  growler-math-0.3.4.1.ebuild:
  QA fixes

*growler-math-0.3.4 (28 Oct 2007)

  24 Oct 2007; Bryan Green <bryan.d.green@nasa.gov>
  +growler-math-0.3.4.ebuild:
  Initial import
