@@ -2,30 +2,24 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-SLOT="0"
-LICENSE="NOSA"
+EAPI=5
 
-KEYWORDS="~amd64 ~x86"
-
-DESCRIPTION="Growler-Math provides a set of math-related classes and functionality"
+DESCRIPTION="Math-related classes and functionality"
 HOMEPAGE="http://www.nas.nasa.gov/~bgreen/growler/"
 SRC_URI="${HOMEPAGE}/downloads/growler-math-${PV}.tar.gz"
 
+SLOT="0"
+LICENSE="NOSA"
+KEYWORDS="~amd64 ~x86"
 IUSE="static"
 
 RDEPEND=">=dev-cpp/growler-core-0.3.7"
-
 DEPEND="${RDEPEND}"
 
-src_compile() {
+DOCS=( README NEWS AUTHORS NOSA ChangeLog )
+
+src_configure() {
 	econf \
 		$(use_enable static) \
-		--enable-fast-install \
-		|| die "could not configure"
-	emake || die "emake failed"
-}
-
-src_install() {
-	emake DESTDIR="${D}" install || die "install failed"
-	dodoc README NEWS AUTHORS NOSA ChangeLog
+		--enable-fast-install
 }
